# Lexie-cloud

./: .gitignore  .pylintrc  Dockerfile  LEXIE_PROTOCOL.md  LICENSE.md  README.md  add_user.py  docker-push.sh  generate_invitations.py  gunicorn.sh  pyproject.toml  requirements.txt  sync.py  tox.ini  wsgi.py
.github/workflows/: ci.yaml  deploy.yaml
lexie_cloud/: app.py  config.py  exceptions.py  extensions.py  lexie_devices.py  users.py  views.py
lexie_cloud/devices/: pc.py
lexie_cloud/templates/: index.html  login.html
test_client/: config.json  lexie_cloud_client.py  pyproject.toml
tests/: test_devices.py  test_lexie_cloud.py  test_users.py  test_views.py
tests/fixtures/: test_app.py
tests/fixtures/devices/: test_device.json
